<resources>
    <string name="app_name">WeShare</string>

    <string name="requestTitleTextView">Title/Label</string>
    <string name="descriptionBox">Enter a description of your Donation Request</string>
    <string name="requestActivityHouseholdSize">Household Size/Number of Individuals</string>
    <string name="requestFillDate">Request Need-by Date</string>
    <string name="requestDietaryRestrictions">Dietary Restrictions</string>
    <string name="requestDietaryRestrictionsExample">Ex: Lactose Intolerant</string>
    <string name="Organization">Is this for an Organization?</string>
    <string name="onOffSwitchRequestActivity">On</string>
    <string name="requestActivityForOrganization">For Organization?</string>
    <string name="requestActivityYesNoSwitch">Yes</string>
    <string name="requestActivityCapableOfMeeting">Capable of Meeting?</string>
    <string name="requestActivityAnonymous">Anonymous Request?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name_input">Name</string>
    <string name="address_input">Address</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="signup_button">Submit</string>
    <string name="verify_signup">Verify User</string>
    <string name="verify_user">Verify Account</string>
    <string name="verification_number">Verification Number</string>
    <string name="submit_button_verify">Submit</string>
    <string name="login_submit_button">Submit</string>
    <string name="submit_login" />
    <string name="login_splash">Submit</string>
    <string name="Login_button">Login</string>
    <string name="signup_button_splash">Sign Up</string>
    <string name="splash_page">Splash</string>
    <string name="email_input">Email</string>
    <string name="login_submit">Submit</string>
    <string name="logout">Logout</string>
    <!--    Juan's string for profile activity-->
    <string name="UserNameProfileActivity">Username</string>
    <string name="profileImageActivity">profile image</string>
    <string name="nameProfileActivity">name</string>
    <string name="usernameProfileActivity">username</string>
    <string name="addressProfileActivity">address</string>
    <string name="zipcodeActivity">zipcode</string>
    <string name="RequestDonationButtonProfileActivity">Request Donation</string>
    <string name="DonateButtonProfileActivity">Donate</string>
    <string name="requestActivityDateFieldEditText">Month/Day/Year</string>
    <string name="requestActivitySubmit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wecare_title">WeCare</string>
    <string name="show_form">Show Form</string>
    <string name="blank_donate_decription">Blank DonateRequest Description</string>
    <string name="emailAddress">email address</string>
    <string name="updateProfileTitle">Update Profile</string>
    <string name="updateProfileButton">Update Profile</string>
    <string name="NewUsernameInputText">enter new username</string>
    <string name="newZipCodeEditText">enter zipcode</string>
    <string name="emailAddressPocCollection">enter POC email address</string>
    <string name="shortDescriptionNeedRequestActivity">Enter short description of need</string>
    <string name="titleBoxRequestActivity">Enter Title for request</string>
    <string name="zipCodeforDonation">Enter your zipcode</string>
    <string name="donate_request">Donations Needed</string>
    <string name="profile">Profile</string>
    <string name="main_button">Main</string>
    <string name="information">Information</string>
    <string name="goback_button">Go Back</string>
    <string name="information_activity">Request Info</string>
    <string name="information_heading">Request\'s Info</string>

</resources>