...
    tools:context=".MainActivity">


    <!--   TODO: Step 1-1: Add a recycler view editor-->

    <Button
        android:id="@+id/MainActivityLogoutButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:drawableLeft="@drawable/logout"
        android:text="@string/logout"
...
