...
        android:layout_marginTop="104dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="65dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/wecare_title"
        android:textSize="37sp"
        app:layout_constraintBottom_toTopOf="@+id/SplashActivityLoginSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainActivitylogoImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mainActivitylogoImageView"
...
